--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restful-web-services</name>
 	<description>Spring Project to learn web services</description>
-	<properties>
+	<!-- <properties>
 		<java.version>11</java.version>
-	</properties>
+	</properties> -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,22 +57,40 @@
 		</dependency>
 		
 		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+		
+	<!-- 	<dependency>
 	    <groupId>io.springfox</groupId>
 	    <artifactId>springfox-boot-starter</artifactId>
 	    <version>3.0.0</version>
-	</dependency>
+	</dependency> -->
  		
-		<dependency>
+		<!-- <dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
 		    <version>2.9.2</version>
-		</dependency>
+		</dependency> -->
 		
-		<dependency>
+		<!-- <dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.9.2</version>
+		</dependency> -->
+		
+		<!-- <dependency>
 		    <groupId>org.springframework.plugin</groupId>
 		    <artifactId>spring-plugin-core</artifactId>
 		    <version>2.0.0.RELEASE</version>
-		</dependency>
+		</dependency> -->
+		
+		<!-- <dependency>
+		    <groupId>org.springframework.plugin</groupId>
+		    <artifactId>spring-plugin-core</artifactId>
+		    <version>2.0.0.RELEASE</version>
+		</dependency> -->
  
  	</dependencies>
 
