--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 logging.level.org.springframework = debug
 spring.messages.basename=messages
+management.endpoints.web.exposure.include=*
+spring.security.user.name=deepanshu.l
+spring.security.user.password=DugriSecurity@1177
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
